Fix center-aligned figures

--- a/css/style.css
+++ b/css/style.css
@@ -7354,6 +7354,9 @@ figure {
   display: table;
   caption-side: bottom;
 }
+figure.align-center {
+  display: table;
+}
 
 figcaption {
   display: table-caption;
